# Ticket-Point

./: .gitignore  README.md  main.cpp  main.h
Database/: DB_Handler.cpp  DB_Handler.h
src/: CMakeLists.txt  Main.cpp
src/Classes/: Person.cpp  Person.h  Technician.cpp  Technician.h  User.cpp  User.h
src/Database/: Database.cpp  Database.h
src/Test/: Connection.cpp  RetrieveTickets.cpp  TicketCreation.cpp
src/Utils/: Utils.cpp  Utils.h
